# sample-well-architected-generative-ai-solutions

./: .gitignore
cloud-optimization-web-interfaces/cloud-optimization-web-interface/: Dockerfile
ecs-bedrock-agent-solution/: SOLUTION_ARCHITECTURE.md
ecs-bedrock-agent-solution/ecs-backend/: Dockerfile
ecs-bedrock-agent-solution/frontend-react/: package-lock.json  package.json
ecs-bedrock-agentcore-dev-autonomous-ws-solution/: README.md
ecs-bedrock-agentcore-longrun-solution/: SOLUTION_ARCHITECTURE.md
ecs-bedrock-agentcore-memory-solution/: README.md  TODO.md  task-memory.yaml
ecs-bedrock-agentcore-runtime-solution/: SOLUTION_ARCHITECTURE.md
mcp-servers/well-architected-security-mcp-server-with-iamrole-support/: pyproject.toml
mcp-servers/well-architected-security-mcp-server-with-iamrole-support/src/: prompts.py  server.py
mcp-servers/well-architected-security-mcp-server-with-iamrole-support/src/tools/: __init__.py  network.py  security.py  storage.py
mcp-servers/well-architected-security-mcp-server-with-iamrole-support/src/util/: __init__.py  credential_utils.py  network_security.py  security_services.py  storage_security.py
mcp-servers/well-architected-security-mcp-server-with-iamrole-support/tests/: test_network_security_additional.py  test_server.py  test_server_coverage.py  test_server_prompts.py  test_server_security_findings.py
multi-role-project/: FAQ.md  PIPELINE-HANDOFF.md  PIPELINE.md  README.md  SECURITY-RULES.md  agent.Architect.md  agent.CloudOps.md  agent.Compliance-auditor.md  agent.Full-stack-dev.md  agent.PM.md  agent.QA.md
(+50 files in other folders)
